<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pl">
    <string name="app_name" translatable="false">ZSME</string>

    <string name="thumbnail" translatable="false">Thumbnail</string>

    <string name="search">Wyszukaj</string>

    <string name="post">Aktualności</string>
    <string name="timetable">Plan lekcji</string>
    <string name="settings">Ustawienia</string>
    <string name="no_results">Brak wyników</string>
    <string name="home_page">Strona internetowa</string>
    <string name="more">Więcej</string>
    <string name="channel_name">Aktualności</string>
    <string name="e_dziennik">E-dziennik</string>
    <string name="contact">Kontakt</string>

    <string name="school_name">Nazwa szkoły</string>
    <string name="school_name_text">Zespół Szkół Mechaniczno-Elektrycznych w Tarnowie</string>

    <string name="school_address">Adres szkoły</string>
    <string name="school_address_text" translatable="false">Szujskiego 13, 33–100 Tarnów</string>
    <string name="school_address_action" translatable="false">https://goo.gl/maps/UCDb4Uky2bzUPQYy6</string>

    <string name="open_hours">Godziny otwarcia</string>
    <string name="open_hours_text">Pon–Pią 7:30–15:30</string>

    <string name="secretariat_email">Sekretariat</string>
    <string name="recruitment_email">Rekrutacja</string>
    <string name="accountancy_email">Księgowość</string>
    <string name="secretariat_email_text" translatable="false">sekretzsme@umt.tarnow.pl</string>
    <string name="recruitment_email_text" translatable="false">rekrutacja@zsme.tarnow.pl</string>
    <string name="accountancy_email_text" translatable="false">ksiegzsme@umt.tarnow.pl</string>

    <string name="school_phone">Telefon</string>
    <string name="school_phone_text" translatable="false">(014) 621 61 84</string>

    <string name="school_phone_fax">Telefon/Fax</string>
    <string name="school_phone_fax_text" translatable="false">(014) 621 61 83</string>

    <string name="school_principal">Dyrektor</string>
    <string name="school_principal_text" translatable="false">dr inż. Grzegorz Szerszeń</string>
    <string name="school_principal_action" translatable="false">dyrzsme@umt.tarnow.pl</string>

    <string name="school_vice_principal">Zastępca dyrektora</string>

    <string name="school_vice1_text" translatable="false">mgr Marta Piszczek</string>
    <string name="school_vice1_action" translatable="false">m.piszczek@zsme.tarnow.pl</string>

    <string name="school_vice2_text" translatable="false">mgr inż. Marcin Kowalski</string>
    <string name="school_vice2_action" translatable="false">m.kowalski@zsme.tarnow.pl</string>


    <string name="share">Udostępnij</string>
    <string name="theme">Motyw</string>
    <string name="notification">Powiadomienia</string>
    <string name="gallery">Zdjęcia</string>
    <string name="error">Wystąpił błąd</string>
    <string name="destination_button">Otwórz w aplikacji</string>
    <string name="timetable_groups">Oddziały</string>
    <string name="timetable_teachers">Nauczyciele</string>
    <string name="timetable_rooms">Sale</string>
    <string-array name="weekdays">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
    </string-array>
    <string name="no_lessons">Brak lekcji w tym dniu.</string>
    <string name="light">Jasny</string>
    <string name="dark">Ciemny</string>
    <string name="system_default">Domyślny systemowy</string>
    <string name="open_in">Otwórz w:</string>
    <string name="source_code">Kod źródłowy</string>
    <string name="source_code_text" translatable="false">xVemu/zsme</string>
    <string name="github_url" translatable="false">https://github.com/xVemu/zsme</string>
    <string name="english">Angielski</string>
    <string name="polish">Polski</string>
    <string name="language">Język</string>
    <string name="no_app">Brak aplikacji.</string>
    <string name="notification_summary">Zarządzaj powiadomieniami</string>
    <string name="image">Zdjęcie</string>
    <string name="back_button">Cofnij</string>
    <string name="retry">Ponów</string>
    <string name="no_connection">Brak połączenia z internetem</string>
    <string name="refresh">Odśwież</string>
    <string name="error_retry">Wystąpił błąd. Spróbuj ponownie klikając</string>
    <string name="search_post">Znajdź post</string>
    <string name="choose_categories">Wybierz kategorie</string>
    <string name="categories">Kategorie</string>
    <string name="choose_authors">Wybierz autorów</string>
    <string name="authors">Autorzy</string>
    <string name="cancel">Anuluj</string>
    <string name="confirm">Potwierdź</string>
    <string name="clear">Wyczyść</string>
    <string name="custom_tabs_error">Nie udało się otworzyć linku</string>
</resources>
