<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/newsFragment">

    <fragment
        android:id="@+id/newsFragment"
        android:name="pl.vemu.zsme.newsFragment.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_news_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <deepLink app:uri="zsme.tarnow.pl" />
        <argument
            android:name="author"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="pl.vemu.zsme.detailedNews.DetailFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_detailFragment_to_galleryFragment"
            app:destination="@id/galleryFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <deepLink app:uri="zsme.tarnow.pl/wp/{url}" />
        <argument
            android:name="url"
            app:argType="string" />
        <action
            android:id="@+id/action_detailFragment_to_newsFragment"
            app:destination="@id/newsFragment" />
    </fragment>
    <fragment
        android:id="@+id/timetableFragment"
        android:name="pl.vemu.zsme.timetableFragment.timetable.TimetableFragment"
        android:label="@string/timetable"
        tools:layout="@layout/fragment_timetable">
        <action
            android:id="@+id/action_timetableFragment_to_lessonFragment"
            app:destination="@id/lessonFragment"
            app:enterAnim="@anim/open_enter"
            app:exitAnim="@anim/open_exit"
            app:popEnterAnim="@anim/close_enter"
            app:popExitAnim="@anim/close_exit" />
        <deepLink app:uri="https://zsme.tarnow.pl/plan/" />
    </fragment>
    <fragment
        android:id="@+id/moreFragment"
        android:name="pl.vemu.zsme.moreFragment.more.MoreFragment"
        android:label="@string/more">
        <action
            android:id="@+id/action_moreFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_moreFragment_to_contactFragment"
            app:destination="@id/contactFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/lessonFragment"
        android:name="pl.vemu.zsme.timetableFragment.lesson.LessonFragment"
        tools:layout="@layout/fragment_lesson">
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="pl.vemu.zsme.moreFragment.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/contactFragment"
        android:name="pl.vemu.zsme.moreFragment.contact.ContactFragment"
        android:label="@string/contact">
        <deepLink app:uri="zsme.tarnow.pl/wp/kontakt/" />
    </fragment>
    <fragment
        android:id="@+id/galleryFragment"
        android:name="pl.vemu.zsme.detailedNews.galleryFragment.GalleryFragment"
        android:label="@string/gallery">
        <argument
            android:name="images"
            app:argType="string[]" />
    </fragment>
</navigation>